--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -18,8 +18,8 @@
             {% include "admin/menu.html.twig" %}
 		</aside>
 
-		<main class="right-aside container">
-			<div class="container pt-2">
+		<main class="right-aside">
+			<div class="mx-5 pt-2">
 				{% include "message.html.twig" %}
 
 				{% block body %}
