--- a/templates/abonne/table.html.twig
+++ b/templates/abonne/table.html.twig
@@ -1,5 +1,18 @@
     <table class="table">
-        <thead>
+        <thead class="thead-dark">
+            <tr>
+                <th colspan="100%">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h1>{{ table_titre }}</h1>
+                        </div>
+                        <a href="{{ path('abonne_new') }}" class="mr-3"> 
+                            <i class="fa fa-plus-square"></i>
+                            Ajouter
+                        </a>
+                    </div>
+                </th>
+            </tr>            
             <tr>
                 <th>Id</th>
                 <th>Prénom</th>
@@ -15,11 +28,11 @@
                 {# <td>{{ abonne.roles ? abonne.roles|json_encode</td> #}
                 <td>{{ abonne.roles|accreditation }}</td>
                 <td class="d-flex justify-content-around">
-                    <a href="{{ path('abonne_show', {'id': abonne.id}) }}">
+                    <a href="{{ path('abonne_show', {'id': abonne.id}) }}" class="btn">
                         <i class="fa fa-user"></i>
 
                     </a>
-                    <a href="{{ path('abonne_edit', {'id': abonne.id}) }}">
+                    <a href="{{ path('abonne_edit', {'id': abonne.id}) }}" class="btn">
                         <i class="fa fa-edit"></i>
                     </a>
 
