--- a/templates/emprunt/_form.html.twig
+++ b/templates/emprunt/_form.html.twig
@@ -1,4 +1,6 @@
 {% extends "admin/formulaire.html.twig" %}
+{# this form theme will be applied only to the form of this template #}
+{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
 {% block titre_formulaire %}
     {{ titre_formulaire ?? "Emprunt" }}
