--- a/templates/admin/menu.html.twig
+++ b/templates/admin/menu.html.twig
@@ -12,11 +12,13 @@
 				<ul>
 					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<a class="nav-link {{ app.request.pathinfo == path("abonne_index") ? " active" : " " }}" href="{{ path("abonne_index") }}">
+							<i class="fa fa-list-alt"></i>
 							Liste
 						</a>
 					</li>
 					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<a class="nav-link {{ app.request.pathinfo == path("abonne_new") ? " active" : " " }}" href="{{ path("abonne_new") }}">
+							<i class="fa fa-plus-square"></i>
 							Ajouter
 						</a>
 					</li>
@@ -31,11 +33,13 @@
 				<ul>
 					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<a class="nav-link {{ app.request.pathinfo == path("livre_index") ? " active" : " " }}" href="{{ path("livre_index") }}">
+							<i class="fa fa-list-alt"></i>
 							Liste
 						</a>
 					</li>
 					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<a class="nav-link {{ app.request.pathinfo == path("livre_new") ? " active" : " " }}" href="{{ path("livre_new") }}">
+							<i class="fa fa-plus-square"></i>
 							Ajouter
 						</a>
 					</li>
@@ -49,11 +53,13 @@
 				<ul>
 					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<a class="nav-link {{ app.request.pathinfo == path("emprunt_index") ? " active" : " " }}" href="{{ path("emprunt_index") }}">
+							<i class="fa fa-list-alt"></i>
 							Liste
 						</a>
 					</li>
 					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<a class="nav-link {{ app.request.pathinfo == path("emprunt_new") ? " active" : " " }}" href="{{ path("emprunt_new") }}">
+							<i class="fa fa-plus-square"></i>
 							Ajouter
 						</a>
 					</li>
