--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -11,7 +11,7 @@
 
 	<body>
         <div class="right-aside">
-            {% include "menu.html.twig" %}
+            {% include"admin/nav.html.twig" %}
         </div>
 
 		<aside class="bg-dark">
