--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -101,6 +101,7 @@ h4.card-header{
 // CARD vignette livre
 .card.livre{
     min-height: 160px;
+    box-shadow: 0 0 10px black;
 }
 
 .livre > .couverture{
