--- a/templates/admin/nav.html.twig
+++ b/templates/admin/nav.html.twig
@@ -8,19 +8,19 @@
 			</button>
 
 
-			<li class="nav-item {{ app.request.pathinfo == path("app_login") ? " active" : " " }}">
-				<a class="nav-link" href="{{ path("app_login") }}">
-					<i class="fa fa-sign-in-alt"></i>
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path("app_logout") }}">
+					<i class="fa fa-sign-out-alt"></i> Déconnexion
 				</a>
 			</li>
 
-			<li class="nav-item {{ app.request.pathinfo == path("app_register") ? " active" : " " }}">
-				<a class="nav-link" href="{{ path("app_register") }}">
-					<i class="fa fa-door-open"></i>
-
-				</a>
-			</li>
-
+			{% if is_granted("ROLE_DEV") and nombdd is defined %}
+				<li class="nav-iem text-white">
+					<a class="nav-link">
+						BDD : {{ nombdd }}
+					</a>
+				</li>
+			{% endif %}
 		</ul>
 
 		<form class="form-inline my-2 my-lg-0" action="{{ path("recherche") }}">
