--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     <body>
         {# MENU #}
         {% block nav %}
-            {% include "menu.html.twig" %}
+            {% include"nav.html.twig" %}
         {% endblock %}
 
         {# MESSAGES #}
