--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -4,6 +4,11 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+
+
+
+
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
@@ -14,7 +19,7 @@
         </li>
 
         <li class="nav-item ">
-          <a class="nav-link" href="">{{ app.user.roles|accreditation }}</a>
+          <a class="nav-link" href="{{ is_granted("ROLE_BIBLIOTHECAIRE") ? path("gestion") : path("profil") }}">{{ app.user.roles|accreditation }}</a>
         </li>
 
 
